Updated theme controls and added smoother animations. Fixed some issues with alignment and made the UI more pleasant.

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,12 @@
 }
 
 @layer base {
+	*,
+	*::before,
+	*::after {
+		@apply transition-colors duration-500;
+	}
+
 	:root {
 		--background: 210 40% 98%;
 		--foreground: 222 47% 11%;
@@ -84,9 +90,6 @@
 		--primary-foreground: 210 40% 98%;
 
 		--border: 214 32% 91%;
-
-		transition: background-color 0.5s ease, color 0.5s ease,
-			border-color 0.5s ease;
 	}
 
 	.dark {
@@ -95,7 +98,8 @@
 
 		--card: 222 47% 8%;
 
-		--primary: 0, 100%, 50%;
+		--primary: 0 90% 50%;
+		/* --primary: 250 65% 65%; */
 		--primary-foreground: 213 31% 91%;
 
 		--border: 217 33% 20%;
